202-Terraform-Phonebook-Application-deployed-on-AWS/terraform-modules/modules/cf-terraform-phonebookapp.tf
provider "aws" {
  region = "us-east-1"
}

resource "aws_vpc" "phonebook_vpc" {
  cidr_block = var.vpc_cidr_block
  tags = {
    Name = "terraform-vpc-${var.environment}"
  }
}

resource "aws_subnet" "public_subnet" {
  cidr_block = var.public_subnet_cidr
  vpc_id = aws_vpc.phonebook_vpc.id
  tags = {
    Name = "terraform-public-subnet-${var.environment}"
  }
}

# resource "aws_subnet" "private_subnet" {
#   cidr_block = var.private_subnet_cidr
#   vpc_id = aws_vpc.phonebook_vpc.id
#   tags = {
#     Name = "terraform-private-subnet-${var.environment}"
#   }
# }

resource "aws_lb" "phnbk" {
  name               = "phnbk-lb-tf"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.lb_sg.id] ##########
  subnets            = [for subnet in aws_subnet.public : subnet.id]

  tags = {
    Name = "phnbk-lb-tf"
  }
}
